# google-colab-cli

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
colab-agent-skill/: SKILL.md
examples/: 01_context_manager_basic.py  02_context_manager_gpu.py  03_remote_decorator.py  04_remote_error.py  05_push_pull_roundtrip.py
google-colab-cli/: SKILL.md
src/colab_cli/: __init__.py  config.py  errors.py  models.py  paths.py  utils.py
src/colab_cli/api/: __init__.py  _harness.py  _sync.py  decorator.py  session.py
src/colab_cli/cli/: __init__.py  __main__.py  auth.py  connect.py  files.py  run.py
src/colab_cli/core/: __init__.py  connection.py  runtime.py  secrets.py
src/colab_cli/core/auth/: __init__.py  credentials.py  oauth.py  token_store.py
src/colab_cli/core/colab/: __init__.py  client.py  headers.py
src/colab_cli/core/jupyter/: __init__.py  rest.py  ws.py
src/colab_cli/formats/: __init__.py  notebook.py  output.py
tests/live/: test_smoke.py
tests/unit/: test_api.py  test_auth.py  test_cli.py  test_colab_client.py  test_config_and_state.py  test_helpers.py  test_jupyter_and_formats.py  test_runtime.py  test_secrets.py
